# gbm-mx-api

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: 00-plan.md  01-discovery-plan.md  02-endpoints-discovered.md  03-usage.md  04-development.md
experiments/: .env.example  README.md
src/gbm_mx_api/: __init__.py  _sync.py  _version.py  client.py  errors.py
src/gbm_mx_api/api/: __init__.py  _base.py  accounts.py  contracts.py  dashboard.py  dividends.py  orders.py  positions.py  transactions.py
src/gbm_mx_api/auth/: __init__.py  login.py  refresh.py  session.py
src/gbm_mx_api/cli/: __init__.py  __main__.py  _common.py  _portfolio_md.py
src/gbm_mx_api/domain/: __init__.py  account.py  contract.py  dividend.py  enums.py  investments_groups.py  order.py  position.py  transaction.py
src/gbm_mx_api/transport/: __init__.py  http.py  redaction.py
tests/: conftest.py  fixtures.py  test_api.py  test_client.py  test_http.py  test_login.py  test_models.py  test_portfolio_md.py  test_redaction.py  test_refresh.py  test_session.py
