[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "gbm-mx-api"
version = "0.2.1"
description = "Unofficial Python client for the GBM+ Mexican brokerage internal API."
readme = "README.md"
license = { text = "BUSL-1.1" }
requires-python = ">=3.10"
authors = [{ name = "Carlos Damken" }]
keywords = ["gbm", "gbmplus", "brokerage", "mexico", "stocks", "trading", "api"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.6",
]

[project.optional-dependencies]
cli = [
    "typer>=0.12",
    "rich>=13.0",
]
keyring = [
    "keyring>=24.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
gbm-mx = "gbm_mx_api.cli.__main__:app"

[project.urls]
Homepage = "https://github.com/cdamken/gbm-mx-api"
Issues = "https://github.com/cdamken/gbm-mx-api/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/gbm_mx_api"]

# ---------------------------------------------------------------------------
# Quality tooling
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",     # pycodestyle + pyflakes
    "I",               # isort
    "B",               # flake8-bugbear
    "UP",              # pyupgrade
    "SIM",             # flake8-simplify
    "RUF",             # ruff-specific
]
ignore = ["E501"]  # line length handled by formatter

[tool.mypy]
python_version = "3.10"
strict = true
warn_unreachable = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
asyncio_mode = "auto"
